Implementing Selectable Logic
Just mouse support for now

--- a/AnimatedStuff/index.html
+++ b/AnimatedStuff/index.html
@@ -6,8 +6,17 @@
 </head>
 <body>
 
+<div class="demoSection">
+	<input id="modalDemo" type="button" value="showModal" />
+</div>
 
-<input id="modalDemo" type="button" value="showModal" />
+
+<div class="demoSection">
+	<div class="selectable">
+		<div class="icon"></div>
+		Tap on me pls
+	</div>
+</div>
 
 
 <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
@@ -26,5 +35,6 @@ jQuery(document).ready(function($){
 
 });
 </script>
+<script src="selectable.js" type="text/javascript"></script>
 </body>
 </html>
