Completed full 'selectable' demo

--- a/AnimatedStuff/index.html
+++ b/AnimatedStuff/index.html
@@ -11,9 +11,25 @@
 </div>
 
 
-<div class="demoSection">
-	<div class="selectable">
-		<div class="icon"></div>
+<div class="demoSection" id="selectable">
+	<div class="selectable unchecked">
+		<div class="icon unchecked"></div>
+		<div class="icon checked"></div>
+		Tap on me pls
+	</div>
+	<div class="selectable unchecked">
+		<div class="icon unchecked"></div>
+		<div class="icon checked"></div>
+		Tap on me pls
+	</div>
+	<div class="selectable unchecked">
+		<div class="icon unchecked"></div>
+		<div class="icon checked"></div>
+		Tap on me pls
+	</div>
+	<div class="selectable unchecked">
+		<div class="icon unchecked"></div>
+		<div class="icon checked"></div>
 		Tap on me pls
 	</div>
 </div>
